I didn't want to make this. I was doing this for an application and I am only pushing this so if I ever felt like it, I could go back to it. The developers couldn't maintain simple plugins and they treated me like trash. I wouldn't want to work with them ever.

--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -1,7 +1,12 @@
-name: CommandManager
+name: HomeCommand
 version: 1.0.0
 main: me.diax.comportment.skycube.Main
-prefix: CommandManager
+prefix: HomeCommand
 authors: [Comportment]
 description: A skyblock spinoff.
-website: github.com/Comportment/CommandManager
+website: github.com/Comportment/SkyCube
+
+commands:
+  skycube:
+    description: The base skycube command.
+    aliases: [sc]
